@@ -16,6 +16,7 @@
 - [#696] Wrong grainline position on layout.
 - [#697] Incomplete Internal Path for Waist Dart.
 - [#698] Problem typing in new axis point for new piece.
+- [#702] Valentina produces broken shortcut (.lnk) files on Windows.
 
 # Version 0.5.0 May 9, 2017
 - [#581] User can now filter input lists by keyword in function wizard.
